--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Mathias Arenfeldt Olesen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "lodash": "^4.17.21",
+    "nodemon": "^3.1.0"
   }
 }
